syntax = "proto3";

package sentra.lab.engine.v1;

option go_package = "github.com/sentra-lab/cli/api/proto;proto";

service SimulationEngine {
  rpc StartSimulation(StartSimulationRequest) returns (StartSimulationResponse);
  rpc GetSimulationStatus(GetSimulationStatusRequest) returns (GetSimulationStatusResponse);
  rpc StopSimulation(StopSimulationRequest) returns (StopSimulationResponse);
  rpc ListSimulations(ListSimulationsRequest) returns (ListSimulationsResponse);
  rpc GetRecording(GetRecordingRequest) returns (GetRecordingResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message StartSimulationRequest {
  string scenario_path = 1;
  SimulationConfig config = 2;
}

message SimulationConfig {
  bool record_full_trace = 1;
  bool enable_cost_tracking = 2;
  int32 timeout_seconds = 3;
  map<string, string> environment = 4;
}

message StartSimulationResponse {
  string run_id = 1;
  string status = 2;
  int64 started_at = 3;
}

message GetSimulationStatusRequest {
  string run_id = 1;
}

message GetSimulationStatusResponse {
  string run_id = 1;
  string status = 2;
  float progress = 3;
  int64 duration_ms = 4;
  double cost_usd = 5;
  int32 assertions = 6;
  repeated string failures = 7;
}

message StopSimulationRequest {
  string run_id = 1;
}

message StopSimulationResponse {
  bool success = 1;
}

message ListSimulationsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string status_filter = 3;
}

message ListSimulationsResponse {
  repeated SimulationSummary simulations = 1;
  int32 total = 2;
}

message SimulationSummary {
  string run_id = 1;
  string scenario = 2;
  string status = 3;
  int64 started_at = 4;
  int64 completed_at = 5;
  int64 duration_ms = 6;
  double cost_usd = 7;
}

message GetRecordingRequest {
  string run_id = 1;
}

message GetRecordingResponse {
  string run_id = 1;
  string scenario = 2;
  int64 started_at = 3;
  int64 duration_ms = 4;
  repeated Event events = 5;
}

message Event {
  string id = 1;
  int64 timestamp = 2;
  string type = 3;
  string service = 4;
  string summary = 5;
  bytes request_data = 6;
  bytes response_data = 7;
  int64 duration_ms = 8;
  int32 tokens_used = 9;
  double cost_usd = 10;
  string error = 11;
}

message PingRequest {}

message PingResponse {
  bool healthy = 1;
  string version = 2;
}